<resources>
    <string name="app_name">Arrive5</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="mobile">Mobile Number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="signup">Signup</string>
    <string name="by_signUp">By signing up,you agree to our terms &amp; conditions,privacy policy Arbitration of disputes and waiver of class action claims. </string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="back_login">Back to Login</string>
    <string name="verify_number">Verify your number</string>
    <string name="insert_code">Please insert the code</string>
    <string name="otp_sent_to">Sent to</string>
    <string name="action_settings">Settings</string>
    <string name="john">John Smith</string>
    <string name="joined">Joined</string>
    <string name="oct">APRIL 2018</string>
    <string name="delhi">New Delhi</string>
    <string name="enrique">Enrique iglesias</string>
    <string name="fun_loving">I am very fun loving guy</string>
    <string name="my_points">My Reward Points</string>
    <string name="total_points">Total Points</string>
    <string name="used_points">Used Points</string>
    <string name="cancel_points">Cancelled Points</string>
    <string name="avail_points">Available Points</string>
    <string name="sendotp_key">224395AcZxiSrJoH5b3de509</string>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Your Rides</item>
        <item>Free Rides</item>
        <item>Add Payment</item>
        <item>Notifications</item>
        <item>Ratings &amp; Reviews</item>
        <item>Promos</item>
        <item>My Rewards</item>
        <item>Help</item>
        <item>Settings</item>
        <item>Logout</item>
        <item>Sign up to Drive</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="code">Code</string>
    <string name="txt_create">I understand and agree to Arrive5 App Terms of Service and Privacy Policy</string>
    <string name="set_picture">Set a profile picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_reset">Please enter your mobile number to reset your password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="confirm_pass">Confirm New Password</string>
    <string name="title">Title</string>
    <string name="your_rides">Your Rides</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_past_rides">No Past Rides</string>
    <string name="no_upcoming_rides">No Upcoming Rides</string>
    <string name="want_more">Want More Arrive5 App and spend less?</string>
    <string name="get_ride">Get free ride worth upto $20 when you refer a friend  to try Arrive5 App</string>
    <string name="how_invite_works">How Invite Works</string>
    <string name="your_code">Your Invite Code</string>
    <string name="sign_out">Sign-out</string>
    <string name="dia_are_you_sure">Are you sure ?</string>
    <string name="dia_yes">Yes, Exit it!</string>
    <string name="no">No</string>
    <string name="promo_code">Promo Code</string>
    <string name="enter_promo">Enter Promo Code</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="finding_ride">Finding your ride</string>
    <string name="otp">OTP:</string>
    <string name="enroute">En Route</string>
    <string name="current_trip">Your current trip</string>
    <string name="profile_setting">Profile Settings</string>
    <string name="business_profile">Business Profile</string>
    <string name="family_profile">Add Family Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="every_ride">Every Ride, Every Mile Foundation</string>
    <string name="member_yet">Not a Arrive5 member yet?</string>
    <string name="earn_points">Earn points with every trip you make?</string>
    <string name="ultimate_goal">Because our ultimate goal is to keep you happy</string>
    <string name="join">Join</string>
    <string name="register">Register here</string>
    <string name="confirm_mail">A confirmation e-mail validating your account will be send to you.</string>
    <string name="once_obtain">Once you obtain your Arrive5 rides account number,you start accumulating points toward free trips at Arrive5.</string>
    <string name="add_view">Add and view your Arrive5  App Promo codes here</string>
    <string name="gift_friend">Gift Arrive5 to friends</string>
    <string name="free_rides">Free Rides</string>
    <string name="you_rated">You Rated</string>
    <string name="schedule_ride">Schedule a Ride</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="change">Change</string>
    <string name="fare_estimate">Fare Estimate</string>
    <string name="surge">Surge may apply</string>
    <string name="optIn">Opt in and we\'ll round up your fares to the nearest dollar,than donate the difference to a charitable cause</string>
    <string name="selected_cause">Selected Cause</string>
    <string name="humanity">Humanity</string>
    <string name="habitat_humanity">Habitat for humanity</string>
    <string name="more_info">More Info</string>
    <string name="stop">Stop</string>
    <string name="share">Share</string>
    <string name="different_cause">Selected a different Cause</string>
    <string name="donate">Donate</string>
    <string name="education_welfare">Education and child wellfare</string>
    <string name="empowering">Empowering child through donating</string>
    <string name="home">Home</string>
    <string name="promos">Promos</string>
    <string name="my_reward">My Rewards</string>
    <string name="notification">Notifications</string>
    <string name="report_issue">Report an issue with this trip</string>
    <string name="help_center">Help Center</string>
    <string name="legal">Legal</string>
    <string name="app_version">App Version</string>
    <string name="help">Help</string>
    <string name="last_trip">Your Last Trip</string>
    <string name="select_issue">Select a issue</string>
    <string name="basic_fare">Basic fare</string>
    <string name="booking_fee">Booking fee</string>
    <string name="min_fare">Minimum fare</string>
    <string name="per_min">+ Per minute</string>
    <string name="per_mile">+ Per mile</string>
    <string name="fare_breakdown">Fare Breakdown</string>
    <string name="your_fare">Your fair will be the price presented before the trip or based on the rates below and others applicable surcharges and adjustments.</string>
    <string name="rating_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="why_cancel">Why is trip being cancellled?</string>
    <string name="back">Back</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">NAME</string>
    <string name="enter_name">Enter Name</string>
    <string name="hometown">HOMETOWN</string>
    <string name="enter_home">Enter Hometown</string>
    <string name="music">FAVOURITE MUSIC</string>
    <string name="enter_music">Enter Favourite Music</string>
    <string name="about">ABOUT ME</string>
    <string name="about_me">About Me</string>
    <string name="send">Send</string>
    <string name="select_driver">Select Driver</string>
    <string name="seat_need">How many seats do you need?</string>
    <string name="passenger">Passenger</string>
    <string name="pass">Passengers</string>
    <string name="req_clipper">If you have more than 3 Passengers,request a clipper+</string>
    <string name="pick_address">Pickup Address</string>
    <string name="destination">Destination</string>
    <string name="where_to">Where to?</string>
    <string name="contact">Contact</string>
    <string name="fare_split">Fare Split</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="share_detail">Share Details</string>
    <string name="source">Source</string>
    <string name="drop_address">Drop Address</string>
    <string name="share_rides">Shared rides,Save your money</string>
    <string name="est_time">Esti. Time</string>
    <string name="people">People</string>
    <string name="promo">% Enter Promo Code</string>
    <string name="Tip">Tip</string>
    <string name="code_App">Invite Code for Arrive5 App</string>
    <string name="enter_address">Enter Source and Destination Address</string>
    <string name="user_exists">User Already Exists</string>
    <string name="no_driver">No Drivers Found</string>
    <string name="payment">Payment</string>
    <string name="no_tip">No tip</string>
    <string name="other">Other</string>
    <string name="rate_trip">Rate Your Trip</string>
    <string name="rate_with">Rate your trip with</string>
    <string name="write_review">Write a review here...</string>
    <string name="inprogress">Verification in <br /> progress</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="business_receipt">Recieve Business Reciepts</string>
    <string name="get_trip">Get business trip reciepts delivered to your work email</string>
    <string name="work_email">Work Email</string>
    <string name="enter_work_email">Enter Work Email</string>
    <string name="email_private">Your email address will remain private.</string>
    <string name="select_payment">Select Default Payment</string>
    <string name="business_trip">Select a default payment method for your business trips</string>
    <string name="payment_methods">Your Payment Methods</string>
    <string name="paypal">PayPal</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash">Cash</string>
    <string name="schedule_reports">Schedule Reports</string>
    <string name="choose_summary">Choose how often you want to recieve your business travel summaries.</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="estimate_fare">Estimate fare</string>
</resources>