<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueColor"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueColor"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_10dp"
                    android:layout_marginStart="@dimen/padding_10dp"
                    android:contentDescription="@string/app_name"
                    android:onClick="BackClick"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/profile_setup"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_5dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10dp"
                    android:gravity="center"
                    android:text="@string/select_payment"
                    android:textAlignment="center"
                    android:textColor="@color/whiteColor"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_top_15dp"
                    android:layout_marginRight="@dimen/margin_top_15dp"
                    android:gravity="center"
                    android:text="@string/business_trip"
                    android:textAlignment="center"
                    android:textColor="@color/whiteColor"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_top_15dp"
                android:layout_marginStart="@dimen/margin_top_15dp"
                android:layout_marginTop="@dimen/padding_20dp"
                android:text="@string/payment_methods"
                android:textAllCaps="true"
                android:textColor="@color/whiteColor" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:buttonTint="@color/whiteColor"
                android:layoutDirection="rtl"
                android:text="@string/credit_card"
                android:textAlignment="textStart"
                android:textColor="@color/whiteColor"
                android:textSize="18sp"
                tools:targetApi="lollipop" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:buttonTint="@color/whiteColor"
                android:layoutDirection="rtl"
                android:text="@string/cash"
                android:textAlignment="textStart"
                android:textColor="@color/whiteColor"
                android:textSize="18sp"
                tools:targetApi="lollipop" />
        </RadioGroup>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:onClick="ScheduleClick"
            android:src="@drawable/next" />
    </LinearLayout>
</ScrollView>
